# length_prefixed_protobuf_final

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt
src/proto_files/: message.proto
src/protobuf_parser/: DelimitedMessagesStreamParser.h  helpers.h
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
